--- a/TA Screener_2/CUT/Code/Make/Makefile
+++ b/TA Screener_2/CUT/Code/Make/Makefile
@@ -1,12 +1,7 @@
-##########################################################
-# Created by: Deshashri Kakade                           #
-# Created on: Wednesday 10 dec 2022 11:07:22 AM IST      #
-##########################################################
-
 
 SRCDIR = ../src
-INCLUDEDIR = ../include
-OBJDIR = ../compile
+INCLUDEDIR = ../header
+OBJDIR = ../make
 BINDIR = ../bin
 CFLAGS = -c -g -Wall -I${INCLUDEDIR}
 
@@ -24,6 +19,6 @@ clean:
 	gcc ${OBJDIR}/main.o ${OBJDIR}/utility.o ${OBJDIR}/formula.o ${BINDIR}/smsh.bin
 
 
-#################### End of Makefile #####################
+
 
 
